--- a/vpn/templates/vpn_list.html
+++ b/vpn/templates/vpn_list.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-md-6">
                         <span><a class="btn btn-sm btn-outline-success float-right m-2" href="{% url 'vpn:vpn-file-config' %}">{% translate '配置文件' %}</a></span>
-                        <span><a class="btn btn-sm btn-outline-success float-right m-2" href="{% url 'vpn:vpn-file-ca' %}">{% translate 'CA证书' %}</a></span>
+{#                        <span><a class="btn btn-sm btn-outline-success float-right m-2" href="{% url 'vpn:vpn-file-ca' %}">{% translate 'CA证书' %}</a></span>#}
                     </div>
                 </div>
             </div>
