--- a/vpn/templates/vpn_list.html
+++ b/vpn/templates/vpn_list.html
@@ -26,7 +26,8 @@
             <div class="card-header">
                 <span class="card-title"><strong><a class="btn btn-primary" href="">{% translate 'VPN用户' %} ({{ count }})</a></strong></span>
                 <span class="card-title"><strong><a class="btn btn-outline-primary" href="{% url 'vpn:vpn-login-log' %}">{% translate 'VPN登录日志' %} ({{ vpn_login_log_count }})</a></strong></span>
-                <span><a class="btn btn-sm btn-primary float-right" href="{% url 'vpn:vpn-add' %}">{% translate '创建VPN' %}</a></span>
+                <span class="card-title"><strong><a class="btn btn-outline-primary" href="{% url 'vpn:vpn-add' %}">{% translate '创建VPN' %}</a></strong></span>
+                <span><strong><a class="btn btn-outline-primary " href="{% url 'vpn:vpn-file-config' %}">{% translate '配置文件' %}</a></strong></span>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -37,7 +38,7 @@
                         </form>
                     </div>
                     <div class="col-md-6">
-                        <span><a class="btn btn-sm btn-outline-success float-right m-2" href="{% url 'vpn:vpn-file-config' %}">{% translate '配置文件' %}</a></span>
+{#                        <span><a class="btn btn-sm btn-outline-success float-right m-2" href="{% url 'vpn:vpn-file-config' %}">{% translate '配置文件' %}</a></span>#}
 {#                        <span><a class="btn btn-sm btn-outline-success float-right m-2" href="{% url 'vpn:vpn-file-ca' %}">{% translate 'CA证书' %}</a></span>#}
                     </div>
                 </div>
