js 文件增加gettext 标记，django 国际化编译

--- a/image/templates/image_delete.html
+++ b/image/templates/image_delete.html
@@ -9,7 +9,7 @@
     <div class="container-fluid">
         {% if image %}
             <div class="from-group">
-                <div class="font-weight-bold m-2">{% translate '确定想要删除镜像吗' %}？</div>
+                <div class="font-weight-bold m-2">{% translate '确定想要删除镜像吗？' %}</div>
                 <div class="m-2">{% translate '镜像名称' %}: {{ image.name }}</div>
             </div>
             <form method="post" class="form-group m-2">
