--- a/reports/templates/reports_list.html
+++ b/reports/templates/reports_list.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" data-toggle="tab" href="#host_group" aria-controls="host_group" aria-selected="false">{% translate '宿主机组' %}</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#host" aria-controls="host" aria-selected="false">宿主机</a>
+                    <a class="nav-link" data-toggle="tab" href="#host" aria-controls="host" aria-selected="false">{% translate '宿主机' %}</a>
                   </li>
                 </ul>
             </div>
