获取可用总资源配额和已用配额信息接口增加数据中心参数

--- a/vms/templates/vms_list.html
+++ b/vms/templates/vms_list.html
@@ -65,7 +65,7 @@
                             <label class="input-group-text">{% translate '关键字' %}</label>
                         </div>
                         <input type="text" class="form-control" name="search" value="{{ search }}"
-                               placeholder="搜 UUID、IP地址、备注"/>
+                               placeholder="{% translate '搜 UUID、IP地址、备注' %}"/>
                         <span class="input-group-text"></span>
                         <button type="submit" class="btn btn-primary form-control">{% translate '筛选' %}</button>
                     </div>
