--- a/vpn/templates/vpn_list.html
+++ b/vpn/templates/vpn_list.html
@@ -26,7 +26,7 @@
             <div class="card-header">
                 <span class="card-title"><strong><a class="btn btn-primary" href="">{% translate 'VPN用户' %} ({{ count }})</a></strong></span>
                 <span class="card-title"><strong><a class="btn btn-outline-primary" href="{% url 'vpn:vpn-login-log' %}">{% translate 'VPN登录日志' %} ({{ vpn_login_log_count }})</a></strong></span>
-                <span class="card-title"><strong><a class="btn btn-outline-primary" href="{% url 'vpn:vpn-add' %}">{% translate '创建VPN' %}</a></strong></span>
+                <span class="card-title"><strong><a class="btn btn-outline-primary" href="{% url 'vpn:vpn-add' %}">{% translate '创建VPN账户' %}</a></strong></span>
                 <span><strong><a class="btn btn-outline-primary " href="{% url 'vpn:vpn-file-config' %}">{% translate '配置文件' %}</a></strong></span>
             </div>
             <div class="card-body">
