vpn 页面头部信息调整、vpn 增加 vpn服务端IP字段

--- a/vpn/templates/add.html
+++ b/vpn/templates/add.html
@@ -11,9 +11,10 @@
         <div class="card-header">
             <span class="card-title"><strong><a href="{% url 'vpn:vpn-list' %}"
                                                 class="btn btn-outline-primary">{% translate 'VPN用户' %} ({{ vpn_user_count }})</a></strong></span>
-            <span class="card-title"><strong><a href=""
-                                                class="btn btn-outline-primary">{% translate 'VPN登录日志' %} ({{ count }})</a></strong></span>
+            <span class="card-title"><strong><a href="{% url 'vpn:vpn-login-log' %}"
+                                                class="btn btn-outline-primary">{% translate 'VPN登录日志' %} ({{ vpn_login_log_count }})</a></strong></span>
             <span><a class="btn btn-primary" href="{% url 'vpn:vpn-add' %}">{% translate '创建VPN账户' %}</a></span>
+            <span><strong><a class="btn btn-outline-primary " href="{% url 'vpn:vpn-file-config' %}">{% translate '配置文件' %}</a></strong></span>
         </div>
         <form method="post">
             {#            <input type="date" name="date" value="2020-03-31"#}
